Working on tests

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p id=time-el></p>
-    <script src="index.js"></script>
+    <p id=weekOfDay-el></p>
+    <script src="/Tests/dayofmonth.js"></script>
 </body>
