Changed back to index.js

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 </head>
 <body>
     <p id=weekOfDay-el></p>
-    <script src="/Tests/Add0.js"></script>
+    <script src="index.js"></script>
 </body>
