Switched to SplitUpdate.js for testing

--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 </head>
 <body>
     <p id=weekOfDay-el></p>
-    <script src="index.js"></script>
+    <script src="./Tests/SplitUpdate.js"></script>
 </body>
