--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <p id=weekOfDay-el></p>
+    <p id=date-el></p>
+    <p id=time-el></p>
     <script src="./Tests/SplitUpdate.js"></script>
 </body>
