Switched back to index.js

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
     <p id=weekOfDay-el></p>
     <p id=date-el></p>
     <p id=time-el></p>
-    <script src="./Tests/SplitUpdate.js"></script>
+    <script src="index.js"></script>
 </body>
