--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p id=weekOfDay-el></p>
+    <p id=dayOfWeek-el></p>
     <p id=date-el></p>
     <p id=time-el></p>
     <script src="index.js"></script>
