--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <p id=dayOfWeek-el></p>
-    <p id=date-el></p>
-    <p id=time-el></p>
-    <script src="index.js"></script>
+    <div class="fulltime">
+        <div class="dayoftheweek">
+            <p id=dayOfWeek-el></p>
+        </div>
+        <date>
+            <p id=date-el></p>
+        </date>
+        <div class="time">
+            <p id=time-el></p>
+        </div>
+    </div>
+        <script src="index.js"></script>
 </body>
