Clean up obsolete paragraphs

--- a/index.html
+++ b/index.html
@@ -10,15 +10,9 @@
 </head>
 <body>
     <div class="fulltime">
-        <div class="dayoftheweek">
-            <p id=dayOfWeek-el></p>
-        </div>
-        <date>
-            <p id=date-el></p>
-        </date>
-        <div class="time">
-            <p id=time-el></p>
-        </div>
+        <div class="dayoftheweek" id=dayOfWeek-el></div>
+        <div class="date" id=date-el></div>
+        <div class="time" id=time-el></div>
     </div>
         <script src="index.js"></script>
 </body>
